--- a/index.html
+++ b/index.html
@@ -53,66 +53,89 @@
       </fieldset>
     </header>
     <main>
-      <section class="container">
-        <div class="card">
+      <section class="container cards">
+        <div class="card card--facebook">
           <div class="card__platform">
-            <div class="card__icon">
-              <img src="./images/icon-facebook.svg" alt="facebook" />
-            </div>
+            <img
+              class="card__icon"
+              src="./images/icon-facebook.svg"
+              alt="facebook"
+            />
             <div class="card__username">@nathanf</div>
           </div>
-          <div class="card__count">
-            1987
+          <div class="card__followers">
+            <div class="card__count card__count--big">1987</div>
             <div class="card__label">Followers</div>
           </div>
-          <div class="card__change">12 Today</div>
+          <div class="card__change card__change--up">
+            <img src="./images/icon-up.svg" alt="up arrow" />
+            <div class="card__number">12 Today</div>
+          </div>
         </div>
 
-        <div class="card">
+        <div class="card card--twitter">
           <div class="card__platform">
-            <div class="card__icon">
-              <img src="./images/icon-twitter.svg" alt="twitter" />
-            </div>
+            <img
+              class="card__icon"
+              src="./images/icon-twitter.svg"
+              alt="twitter"
+            />
+
             <div class="card__username">@nathanf</div>
           </div>
-          <div class="card__count">
-            1044
+          <div class="card__followers">
+            <div class="card__count card__count--big">1044</div>
             <div class="card__label">Followers</div>
           </div>
-          <div class="card__change">99 Today</div>
+          <div class="card__change card__change--up">
+            <img src="./images/icon-up.svg" alt="" />
+            <div class="card__number">99 Today</div>
+          </div>
         </div>
 
-        <div class="card">
+        <div class="card card--instagram">
           <div class="card__platform">
-            <div class="card__icon">
-              <img src="./images/icon-instagram.svg" alt="instagram" />
-            </div>
+            <img
+              class="card__icon"
+              src="./images/icon-instagram.svg"
+              alt="instagram"
+            />
             <div class="card__username">@realnathanf</div>
           </div>
-          <div class="card__count">
-            11k
+          <div class="card__followers">
+            <div class="card__count card__count--big">11k</div>
             <div class="card__label">Followers</div>
           </div>
-          <div class="card__change">1099 Today</div>
+          <div class="card__change card__change--up">
+            <img src="./images/icon-up.svg" alt="" />
+            <div class="card__number">1099 Today</div>
+          </div>
         </div>
 
-        <div class="card">
+        <div class="card card--youtube">
           <div class="card__platform">
-            <div class="card__icon">
-              <img src="./images/icon-youtube.svg" alt="youtube" />
-            </div>
+            <img
+              class="card__icon"
+              src="./images/icon-youtube.svg"
+              alt="youtube"
+            />
+
             <div class="card__username">Nathan F.</div>
           </div>
-          <div class="card__count">
-            8239
+          <div class="card__followers">
+            <div class="card__count card__count--big">8239</div>
             <div class="card__label">Subscribers</div>
           </div>
-          <div class="card__change">144 Today</div>
+          <div class="card__change card__change--down">
+            <img src="./images/icon-down.svg" alt="" />
+            <div class="card__number">144 Today</div>
+          </div>
         </div>
       </section>
 
-      <section class="container">
-        Overview - Today Page Views 87 3% Likes 52 2% Likes 5462 2257% Profile
+      <section class="container cards">
+        <div class="card"></div>
+        Page Views 87 3% Overview - Today Likes 52 2% Likes 5462 2257% Profile
         Views 52k 1375% Retweets 117 303% Likes 507 553% Likes 107 19% Total
         Views 1407 12%
       </section>
