--- a/index.html
+++ b/index.html
@@ -40,16 +40,13 @@
         aria-label="theme-toggle"
         role="radiogroup"
       >
+        <legend for="dark">Dark Mode</legend>
         <div class="toggle__wrapper">
           <input type="radio" name="theme" id="dark" />
-          <input type="radio" name="theme" id="system" checked />
           <input type="radio" name="theme" id="light" />
           <span aria-hidden="true" class="toggle__background"></span>
           <span aria-hidden="true" class="toggle__button"></span>
         </div>
-        <label for="dark">Dark</label>
-        <label for="system">System</label>
-        <label for="light">Light</label>
       </fieldset>
     </header>
     <main>
@@ -133,11 +130,82 @@
         </div>
       </section>
 
-      <section class="container cards">
-        <div class="card"></div>
-        Page Views 87 3% Overview - Today Likes 52 2% Likes 5462 2257% Profile
-        Views 52k 1375% Retweets 117 303% Likes 507 553% Likes 107 19% Total
-        Views 1407 12%
+      <section class="container">
+        <h2>Overview - Today</h2>
+        <div class="cards">
+          <div class="card card-grid">
+            <div class="card__subtitle">Page Views</div>
+            <img class="" src="./images/icon-facebook.svg" alt="facebook" />
+            <div class="card__count card__count--small">87</div>
+            <div class="card__change card__change--up">
+              <img src="./images/icon-up.svg" alt="" />
+              <div class="card__number">3%</div>
+            </div>
+          </div>
+          <div class="card card-grid">
+            <div class="card__subtitle">Likes</div>
+            <img class="" src="./images/icon-facebook.svg" alt="facebook" />
+            <div class="card__count card__count--small">52</div>
+            <div class="card__change card__change--down">
+              <img src="./images/icon-down.svg" alt="" />
+              <div class="card__number">2%</div>
+            </div>
+          </div>
+          <div class="card card-grid">
+            <div class="card__subtitle">Likes</div>
+            <img class="" src="./images/icon-instagram.svg" alt="instagram" />
+            <div class="card__count card__count--small">5462</div>
+            <div class="card__change card__change--up">
+              <img src="./images/icon-up.svg" alt="" />
+              <div class="card__number">2257%</div>
+            </div>
+          </div>
+          <div class="card card-grid">
+            <div class="card__subtitle">Page Views</div>
+            <img class="" src="./images/icon-instagram.svg" alt="instagram" />
+            <div class="card__count card__count--small">52k</div>
+            <div class="card__change card__change--up">
+              <img src="./images/icon-up.svg" alt="" />
+              <div class="card__number">1375%</div>
+            </div>
+          </div>
+          <div class="card card-grid">
+            <div class="card__subtitle">Retweets</div>
+            <img class="" src="./images/icon-twitter.svg" alt="twitter" />
+            <div class="card__count card__count--small">117</div>
+            <div class="card__change card__change--up">
+              <img src="./images/icon-up.svg" alt="" />
+              <div class="card__number">303%</div>
+            </div>
+          </div>
+          <div class="card card-grid">
+            <div class="card__subtitle">Likes</div>
+            <img class="" src="./images/icon-twitter.svg" alt="twitter" />
+            <div class="card__count card__count--small">507</div>
+            <div class="card__change card__change--up">
+              <img src="./images/icon-up.svg" alt="" />
+              <div class="card__number">553%</div>
+            </div>
+          </div>
+          <div class="card card-grid">
+            <div class="card__subtitle">Likes</div>
+            <img class="" src="./images/icon-youtube.svg" alt="youtube" />
+            <div class="card__count card__count--small">107</div>
+            <div class="card__change card__change--down">
+              <img src="./images/icon-down.svg" alt="" />
+              <div class="card__number">19%</div>
+            </div>
+          </div>
+          <div class="card card-grid">
+            <div class="card__subtitle">Total Views</div>
+            <img class="" src="./images/icon-youtube.svg" alt="youtube" />
+            <div class="card__count card__count--small">1407</div>
+            <div class="card__change card__change--down">
+              <img src="./images/icon-down.svg" alt="" />
+              <div class="card__number">12%</div>
+            </div>
+          </div>
+        </div>
       </section>
     </main>
   </body>
