added javascript for toggle functions

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <!-- Javascript -->
     <script defer src="./app/JS/script.js"></script>
 
-    <title>Frontend Mentor | [Challenge Name Here]</title>
+    <title>Frontend Mentor | Social Media Dashboard</title>
   </head>
 
   <body>
@@ -40,13 +40,16 @@
         aria-label="theme-toggle"
         role="radiogroup"
       >
-        <legend for="dark">Dark Mode</legend>
+        <label for="dark"
+          >Dark Mode <span class="visually-hidden">On</span></label
+        >
         <div class="toggle__wrapper">
           <input type="radio" name="theme" id="dark" />
           <input type="radio" name="theme" id="light" />
           <span aria-hidden="true" class="toggle__background"></span>
           <span aria-hidden="true" class="toggle__button"></span>
         </div>
+        <label for="light">Dark Mode Off</label>
       </fieldset>
     </header>
     <main>
